Resuelve #44 - Se añade año dinámico en el footer

--- a/Front-end/src/app/shared/components/footer/footer.component.html
+++ b/Front-end/src/app/shared/components/footer/footer.component.html
@@ -7,7 +7,7 @@
 			<ul class="nav-primario">
 				<li>
 					<span class="span-text">
-						Gero Gero Shop 2023
+						Gero Gero Shop {{currentYear}}
 					</span>
 					<mat-icon>copyright</mat-icon>
 				</li>
