Resuelve #49 - Front y fixes a backend

--- a/Front-end/src/styles.scss
+++ b/Front-end/src/styles.scss
@@ -20,7 +20,8 @@ html ::before {
 
 // Header & Footer
 .header-container,
-.footer-container {
+.footer-container,
+app-footer {
   position: relative;
   max-width: 100%;
   background-color: #111;
@@ -119,25 +120,25 @@ html ::before {
 }
 
 .mdc-text-field--focused:not(.mdc-text-field--disabled) .mdc-floating-label {
-  color: #ffee00;
+  color: #fff;
 }
 
 .mdc-text-field .mdc-text-field__input {
-  caret-color: #ffee00;
+  caret-color: #fff;
 }
 
 .mdc-text-field--invalid:not(.mdc-text-field--disabled):hover
   .mdc-line-ripple::before {
-  border-bottom-color: #ffee00;
+  border-bottom-color: #fff;
 }
 
 .mdc-text-field--invalid:not(.mdc-text-field--disabled)
   .mdc-line-ripple::after {
-  border-bottom-color: #ffee00;
+  border-bottom-color: #fff;
 }
 
 .mdc-text-field--filled .mdc-line-ripple::after {
-  border-bottom-color: #ffee00;
+  border-bottom-color: #fff;
 }
 
 // Snackbar colors
@@ -161,4 +162,26 @@ html ::before {
   background-color: #f44336;
   color: white !important;
   border: none;
+}
+
+.pass-icon {
+  background-color: #111;
+  border: none;
+  color: #fff;
+  margin-right: 1rem;
+}
+
+.botones {
+  background-color: #111;
+  color: #fff;
+  width: 50%;
+  height: 2.5rem;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: large;
+
+  &:hover {
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
+  }
 }
