Resolves #52 - Falta enviar a la api

--- a/Front-end/src/app/admin/admin-panel/admin-panel.component.html
+++ b/Front-end/src/app/admin/admin-panel/admin-panel.component.html
@@ -1,1 +1,13 @@
-<h1>Bienvenido al Panel de Administración</h1>
+<div class="admin-panel-container">
+	<div class="container">
+		<div class="text-container">
+			<h1>Bienvenido al Panel de Administración</h1>
+		</div>
+		<mat-tab-group backgroundColor="primary" preserveContent>
+			<mat-tab label="Administra usuarios"></mat-tab>
+			<mat-tab label="Administra Funkos">
+				<app-admin-funkos></app-admin-funkos>
+			</mat-tab>
+		</mat-tab-group>
+	</div>
+</div>
