--- a/Front-end/src/app/shared/components/header/header.component.html
+++ b/Front-end/src/app/shared/components/header/header.component.html
@@ -11,8 +11,8 @@
 					</a>
 				</li>
 				<li *ngIf="!isSessionExpired && roleVerified">
-					<a routerLink="/usuarios">
-						Usuarios
+					<a routerLink="/admin">
+						Panel de Administración
 					</a>
 				</li>
 			</ul>
